# SIMUnet

./: pyproject.toml
simudata/commondata/ATLAS_TTBAR_13TEV/: kinematics_TTMNORM.yaml  metadata.yaml  uncertainties_DEFAULT_TTMNORM.yaml
simudata/commondata/ATLAS_TTBAR_13TEV_DILEPTON/: data_DEFAULT_TOTAL.yaml  metadata.yaml  uncertainties_DEFAULT_TOTAL.yaml
simudata/commondata/ATLAS_TTBAR_13TEV_HADRONIC/: data_DEFAULT_TOTAL.yaml  metadata.yaml  uncertainties_DEFAULT_TOTAL.yaml
simudata/commondata/ATLAS_TTBAR_13TEV_HADRONIC_TTM/: kinematics_2D.yaml  metadata.yaml  uncertainties_DEFAULT_2D.yaml
simudata/commondata/CMS_DY_8TEV/: data_DEFAULT_MLL.yaml  kinematics_MLL.yaml  metadata.yaml  uncertainties_DEFAULT_MLL.yaml
simudata/commondata/HLLHC_DY_14TEV_HL_CC/: data_DEFAULT_EL.yaml  data_DEFAULT_MU.yaml  kinematics_EL.yaml  metadata.yaml  uncertainties_DEFAULT_EL.yaml  uncertainties_DEFAULT_MU.yaml
simudata/commondata/HLLHC_DY_14TEV_HL_NC/: data_DEFAULT_EL.yaml  data_DEFAULT_MU.yaml  kinematics_EL.yaml  metadata.yaml  uncertainties_DEFAULT_EL.yaml  uncertainties_DEFAULT_MU.yaml
simudata/commondata/HLLHC_DY_7TEV/: data_DEFAULT_HL.yaml  data_DEFAULT_W0.yaml  data_DEFAULT_Y0.yaml  kinematics_Y0.yaml  metadata.yaml  uncertainties_DEFAULT_HL.yaml  uncertainties_DEFAULT_W0.yaml  uncertainties_DEFAULT_Y0.yaml
simudata/commondata/LHCB_Z0_13TEV_DIMUON/: data_DEFAULT_5P1FB.yaml  kinematics_5P1FB.yaml  metadata.yaml  uncertainties_DEFAULT_5P1FB.yaml
src/simunet/: __init__.py
