[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simunet"
version = "1.0.0"
description = "Simunet package"
authors = [
  { name="User", email="user@example.com" },
]
dependencies = [
    "nnpdf>=4.1.2",
]
requires-python = ">=3.10"

[project.scripts]
simunet = "simunet.scripts.simunet_script:main"

[tool.setuptools.packages.find]
where = ["src"]
